--- a/laborator2/app/src/main/AndroidManifest.xml
+++ b/laborator2/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.laborator2">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +15,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".SensorsActivity"
+            android:label="Sensors"
+            android:parentActivityName=".MainActivity">
+        </activity>
         <activity
             android:name=".SettingsActivity"
             android:label="Settings"
@@ -20,8 +31,8 @@
             android:parentActivityName=".MainActivity">
         </activity>
         <activity
-            android:name=".Home"
-            android:label="Home"
+            android:name=".Location"
+            android:label="Location"
             android:parentActivityName=".MainActivity">
         </activity>
         <activity android:name=".MainActivity">
