--- a/laborator2/app/src/main/AndroidManifest.xml
+++ b/laborator2/app/src/main/AndroidManifest.xml
@@ -6,7 +6,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
 
-
+    <uses-permission android:name="android.permission.CAMERA"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-feature android:name="android.hardware.Camera"></uses-feature>
 
     <application
         android:allowBackup="true"
@@ -28,6 +30,11 @@
         <activity
             android:name=".Contact"
             android:label="Contact"
+            android:parentActivityName=".MainActivity">
+        </activity>
+        <activity
+            android:name=".CameraActivity"
+            android:label="Camera"
             android:parentActivityName=".MainActivity">
         </activity>
         <activity
